feat(recycler): Added listener to recycler to call actions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="label_release">%1s - %2smin</string>
     <string name="label_watched">Asistido</string>
     <string name="label_delete">Deletar</string>
+    <string name="edit">Editar</string>
+    <string name="delete">Deletar</string>
 </resources>
