--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,12 @@
     <string name="to_rating">Dar nota</string>
     <string name="cancel">Cancelar</string>
     <string name="send">Enviar</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_name">Nome:</string>
+    <string name="hint_producer">Produtora:</string>
+    <string name="hint_year">Ano:</string>
+    <string name="hint_duration">Duração:</string>
+    <string name="label_already_watched">Já assisti?</string>
+    <string name="label_save">Salvar</string>
 </resources>
